crates/service/tests/definition/snapshots/features__definition__goto_declaration__func_ident_idx.snap
---
source: crates/service/tests/definition/goto_declaration.rs
expression: response
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 2,
        "character": 10
      },
      "end": {
        "line": 2,
        "character": 15
      }
    }
  }
]
